--- a/plugin-kernel/pom.xml
+++ b/plugin-kernel/pom.xml
@@ -4,12 +4,12 @@
     <modelVersion>4.0.0</modelVersion>
     <packaging>jar</packaging>
 
-    <artifactId>plugin-extension</artifactId>
-    <name>Plugin Loader</name>
+    <artifactId>plugin-kernel</artifactId>
+    <name>Plugin Kernel</name>
 
     <parent>
         <groupId>com.steeplesoft</groupId>
-        <artifactId>cdiexperiment</artifactId>
+        <artifactId>plugin-system</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
