--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.steeplesoft</groupId>
-    <artifactId>cdi-plugins</artifactId>
+    <artifactId>plugin-system</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>CDI Plugins</name>
@@ -15,10 +15,13 @@
     </properties>
 
     <modules>
+        <!--
         <module>plugin-system</module>
         <module>plugin-sample1</module>
         <module>plugin-sample2</module>
-        <module>plugin-loader</module>
+        -->
+        <module>plugin-data</module>
+        <module>plugin-kernel</module>
     </modules>
 
     <dependencies>
