--- a/plugin-data/pom.xml
+++ b/plugin-data/pom.xml
@@ -1,51 +1,14 @@
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <packaging>jar</packaging>
-
-    <artifactId>plugin-data</artifactId>
-    <name>Plugin Data</name>
-
     <parent>
         <groupId>com.steeplesoft</groupId>
-        <artifactId>plugin-system</artifactId>
+        <artifactId>plugin-system-parent</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <dependencies>
-        <dependency>
-            <groupId>org.jboss.weld.se</groupId>
-            <artifactId>weld-se</artifactId>
-            <version>1.1.5.Final</version>
-        </dependency>
-        <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>plugin-system</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-    </dependencies>
-
-    <!--
-    <build>
-        <plugins>
-            <plugin>
-                <executions>
-                    <execution>
-                        <id>run</id>
-                        <phase>test</phase>
-                        <goals>
-                            <goal>java</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId>
-                <configuration>
-                    <mainClass>org.jboss.weld.environment.se.StartMain</mainClass>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
-    -->
+    <modelVersion>4.0.0</modelVersion>
+    <packaging>jar</packaging>
+    <artifactId>plugin-data</artifactId>
+    <name>Plugin Data</name>
 </project>
