--- a/plugin-kernel/pom.xml
+++ b/plugin-kernel/pom.xml
@@ -9,7 +9,7 @@
 
     <parent>
         <groupId>com.steeplesoft</groupId>
-        <artifactId>plugin-system</artifactId>
+        <artifactId>plugin-system-parent</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
@@ -19,13 +19,32 @@
             <artifactId>weld-se</artifactId>
             <version>1.1.5.Final</version>
         </dependency>
+        <!--
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>plugin-system</artifactId>
             <version>${project.version}</version>
         </dependency>
+        -->
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>plugin-data</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>plugin-finder-fs</artifactId>
+            <version>${project.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.steeplesoft</groupId>
+            <artifactId>plugin-system</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>test</scope>
+            <type>jar</type>
+        </dependency>
     </dependencies>
-
     <!--
     <build>
         <plugins>
