Rename artifact Minor findbugs fixes

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 /plugin-finder-filesystem/target/
 /example/plugin-sample1/target/
 /example/plugin-sample2/target/
+/example/sample-plugin-data/target/
+/example/example-plugin-data/target/
