--- a/example/plugin-sample1/pom.xml
+++ b/example/plugin-sample1/pom.xml
@@ -15,7 +15,7 @@
     <dependencies>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>plugin-system</artifactId>
+            <artifactId>example-plugin-data</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
