--- a/example/plugin-sample2/pom.xml
+++ b/example/plugin-sample2/pom.xml
@@ -14,7 +14,7 @@
     <dependencies>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>plugin-system</artifactId>
+            <artifactId>example-plugin-data</artifactId>
             <version>${project.version}</version>
             <scope>provided</scope>
         </dependency>
