--- a/plugin-kernel/pom.xml
+++ b/plugin-kernel/pom.xml
@@ -19,13 +19,6 @@
             <artifactId>weld-se</artifactId>
             <version>1.1.5.Final</version>
         </dependency>
-        <!--
-        <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>plugin-system</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        -->
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>plugin-data</artifactId>
@@ -39,32 +32,10 @@
         </dependency>
         <dependency>
             <groupId>com.steeplesoft</groupId>
-            <artifactId>plugin-system</artifactId>
+            <artifactId>example-plugin-data</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>test</scope>
             <type>jar</type>
         </dependency>
     </dependencies>
-    <!--
-    <build>
-        <plugins>
-            <plugin>
-                <executions>
-                    <execution>
-                        <id>run</id>
-                        <phase>test</phase>
-                        <goals>
-                            <goal>java</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId>
-                <configuration>
-                    <mainClass>org.jboss.weld.environment.se.StartMain</mainClass>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
-    -->
 </project>
