Added initial JSF support

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,2 @@
-/plugin-kernel/target/
-/plugin-data/target/
-/plugin-finder-filesystem/target/
-/example/plugin-sample1/target/
-/example/plugin-sample2/target/
-/example/sample-plugin-data/target/
-/example/example-plugin-data/target/
+target
+faces-config.NavData
