--- a/example/webapp/pom.xml
+++ b/example/webapp/pom.xml
@@ -2,9 +2,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>plugin-sample1</artifactId>
-    <name>Plugin Sample #1</name>
-    <packaging>jar</packaging>
+    <artifactId>plugin-sample-webapp</artifactId>
+    <name>Plugin Webapp</name>
+    <packaging>war</packaging>
 
     <parent>
         <groupId>com.steeplesoft</groupId>
@@ -19,10 +19,15 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>javax</groupId>
-            <artifactId>javaee-api</artifactId>
-            <version>6.0</version>
-            <scope>provided</scope>
+            <groupId>com.steeplesoft</groupId>
+            <artifactId>plugin-kernel</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.steeplesoft</groupId>
+            <artifactId>plugin-finder-fs</artifactId>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
 </project>
+
