--- a/plugin-finder-filesystem/pom.xml
+++ b/plugin-finder-filesystem/pom.xml
@@ -15,7 +15,7 @@
     <dependencies>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>plugin-data</artifactId>
+            <artifactId>plugin-system</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
