--- a/plugin-kernel/pom.xml
+++ b/plugin-kernel/pom.xml
@@ -18,10 +18,11 @@
             <groupId>org.jboss.weld.se</groupId>
             <artifactId>weld-se</artifactId>
             <version>1.1.5.Final</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>plugin-data</artifactId>
+            <artifactId>plugin-system</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
@@ -36,6 +37,18 @@
             <version>1.0-SNAPSHOT</version>
             <scope>test</scope>
             <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>javax</groupId>
+            <artifactId>javaee-api</artifactId>
+            <version>6.0</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish</groupId>
+            <artifactId>javax.faces</artifactId>
+            <version>2.1.6</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 </project>
