--- a/plugin-system/pom.xml
+++ b/plugin-system/pom.xml
@@ -9,6 +9,6 @@
 
     <modelVersion>4.0.0</modelVersion>
     <packaging>jar</packaging>
-    <artifactId>plugin-data</artifactId>
-    <name>Plugin Data</name>
+    <artifactId>plugin-system</artifactId>
+    <name>Plugin System</name>
 </project>
