--- a/plugin-kernel/pom.xml
+++ b/plugin-kernel/pom.xml
@@ -26,17 +26,23 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>plugin-finder-fs</artifactId>
-            <version>${project.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
             <groupId>com.steeplesoft</groupId>
             <artifactId>example-plugin-data</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>test</scope>
             <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.faces</groupId>
+            <artifactId>jsf-api</artifactId>
+            <version>2.1.6</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.persistence</groupId>
+            <artifactId>javax.persistence</artifactId>
+            <version>2.0.3</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>javax</groupId>
