--- a/example/plummer-sample2/pom.xml
+++ b/example/plummer-sample2/pom.xml
@@ -1,30 +1,22 @@
-
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <artifactId>plummer-sample2</artifactId>
+    <name>Plummer Sample #2</name>
+    <packaging>jar</packaging>
 
     <parent>
         <groupId>org.glassfish.plummer</groupId>
-        <artifactId>plummer-parent</artifactId>
+        <artifactId>plummer-example-parent</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-
-    <artifactId>plummer-example-parent</artifactId>
-    <packaging>pom</packaging>
-    <name>Plummer Example Parent</name>
-    
-    <modules>
-        <module>plummer-example-data</module>
-        <module>plummer-sample1</module>
-        <module>plummer-sample2</module>
-        <module>webapp</module>
-    </modules>
 
     <dependencies>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>plummer-api</artifactId>
+            <artifactId>plummer-example-data</artifactId>
             <version>${project.version}</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 </project>
