--- a/example/webapp/pom.xml
+++ b/example/webapp/pom.xml
@@ -2,32 +2,121 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>plugin-sample-webapp</artifactId>
-    <name>Plugin Webapp</name>
+    <artifactId>example-webapp</artifactId>
+    <name>Plummer Example Webapp</name>
     <packaging>war</packaging>
 
     <parent>
-        <groupId>com.steeplesoft</groupId>
-        <artifactId>example-plugin-parent</artifactId>
+        <groupId>org.glassfish.plummer</groupId>
+        <artifactId>plummer-example-parent</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     
     <dependencies>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>example-plugin-data</artifactId>
+            <artifactId>plummer-example-data</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.steeplesoft</groupId>
-            <artifactId>plugin-kernel</artifactId>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>plummer-kernel</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.steeplesoft</groupId>
-            <artifactId>plugin-finder-fs</artifactId>
-            <version>${project.version}</version>
+            <groupId>javax</groupId>
+            <artifactId>javaee-api</artifactId>
+            <version>6.0</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
+    <profiles>
+        <profile>
+            <id>owb</id>
+            <dependencies>
+                <dependency>
+                    <groupId>org.apache.openwebbeans</groupId>
+                    <artifactId>openwebbeans-impl</artifactId>
+                    <version>1.1.3</version>
+                </dependency>
+
+                <dependency>
+                    <groupId>org.apache.geronimo.specs</groupId>
+                    <artifactId>geronimo-interceptor_1.1_spec</artifactId>
+                    <version>1.0</version>
+                    <scope>provided</scope>
+                </dependency>
+
+
+                <dependency>
+                    <groupId>org.apache.openwebbeans</groupId>
+                    <artifactId>openwebbeans-web</artifactId>
+                    <version>1.1.3</version>
+                </dependency>
+
+                <dependency>
+                    <groupId>org.apache.geronimo.specs</groupId>
+                    <artifactId>geronimo-servlet_3.0_spec</artifactId>
+                    <version>1.0</version>
+                    <scope>provided</scope>
+                </dependency>
+
+                <dependency>
+                    <groupId>org.apache.openwebbeans</groupId>
+                    <artifactId>openwebbeans-ee-common</artifactId>
+                    <version>1.1.3</version>
+                </dependency>
+
+                <dependency>
+                    <groupId>org.apache.geronimo.specs</groupId>
+                    <artifactId>geronimo-jcdi_1.0_spec</artifactId>
+                    <scope>provided</scope>
+                    <version>1.0</version>
+                </dependency>
+
+                <dependency>
+                    <groupId>org.apache.geronimo.specs</groupId>
+                    <artifactId>geronimo-atinject_1.0_spec</artifactId>
+                    <scope>provided</scope>
+                    <version>1.0</version>
+                </dependency>
+
+                <dependency>
+                    <groupId>org.apache.openwebbeans</groupId>
+                    <artifactId>openwebbeans-spi</artifactId>
+                    <version>1.1.3</version>
+                    <scope>provided</scope>
+                </dependency>
+   
+                <dependency>
+                    <groupId>org.apache.openwebbeans</groupId>
+                    <artifactId>openwebbeans-resource</artifactId>
+                    <version>1.1.3</version>
+                </dependency>
+                
+                <dependency>
+                    <groupId>com.sun.faces</groupId>
+                    <artifactId>jsf-api</artifactId>
+                    <version>2.1.7</version>
+                </dependency>
+                <dependency>
+                    <groupId>com.sun.faces</groupId>
+                    <artifactId>jsf-impl</artifactId>
+                    <version>2.1.7</version>
+                </dependency>
+
+                <dependency>
+                    <groupId>com.sun.jersey</groupId>
+                    <artifactId>jersey-server</artifactId>
+                    <version>1.12</version>
+                </dependency>
+                <dependency>
+                    <groupId>com.sun.jersey.glassfish.v3.osgi</groupId>
+                    <artifactId>jersey-gf-servlet</artifactId>
+                    <version>1.12</version>
+                </dependency>
+            </dependencies>
+        </profile>
+    </profiles>
 </project>
 
