--- a/example/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/example/webapp/src/main/webapp/WEB-INF/web.xml
@@ -13,6 +13,21 @@
         <servlet-name>Faces Servlet</servlet-name>
         <url-pattern>*.jsf</url-pattern>
     </servlet-mapping>
+    <!--
+    <servlet>
+        <servlet-name>Jersey Web Application</servlet-name>
+        <servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
+        <init-param>
+            <param-name>com.sun.jersey.config.property.packages</param-name>
+            <param-value>org.glassfish.plummer.example.webapp</param-value>
+        </init-param>
+    </servlet>
+    
+    <servlet-mapping>
+        <servlet-name>Jersey Web Application</servlet-name>
+        <url-pattern>/rest/*</url-pattern>
+    </servlet-mapping>
+    -->
 
     <welcome-file-list>
         <welcome-file>index.jsf</welcome-file>
