--- a/pom.xml
+++ b/pom.xml
@@ -2,11 +2,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.steeplesoft</groupId>
-    <artifactId>plugin-system-parent</artifactId>
+    <groupId>org.glassfish.plummer</groupId>
+    <artifactId>plummer-parent</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
-    <name>CDI Plugins</name>
+    <name>Plummer Parent</name>
     
     <properties>
         <cdi.version>1.0</cdi.version>
@@ -15,15 +15,9 @@
     </properties>
 
     <modules>
-        <!--
-        <module>plugin-system</module>
-        <module>plugin-sample1</module>
-        <module>plugin-sample2</module>
-        -->
-        <module>plugin-system</module>
-        <module>plugin-finder-filesystem</module>
+        <module>plummer-api</module>
         <module>example</module>
-        <module>plugin-kernel</module>
+        <module>plummer-kernel</module>
     </modules>
 
     <dependencies>
