--- a/plummer-kernel/pom.xml
+++ b/plummer-kernel/pom.xml
@@ -17,7 +17,7 @@
         <dependency>
             <groupId>org.jboss.weld.se</groupId>
             <artifactId>weld-se</artifactId>
-            <version>1.1.5.Final</version>
+            <version>2.0.0.Alpha1</version>
             <scope>test</scope>
         </dependency>
         <dependency>
