--- a/plummer-kernel/pom.xml
+++ b/plummer-kernel/pom.xml
@@ -32,12 +32,14 @@
             <scope>test</scope>
             <type>jar</type>
         </dependency>
+        <!--
         <dependency>
             <groupId>com.sun.faces</groupId>
             <artifactId>jsf-api</artifactId>
-            <version>2.1.6</version>
+            <version>2.2.0-m01</version>
             <scope>test</scope>
         </dependency>
+        -->
         <dependency>
             <groupId>org.eclipse.persistence</groupId>
             <artifactId>javax.persistence</artifactId>
@@ -59,7 +61,7 @@
         <dependency>
             <groupId>org.glassfish</groupId>
             <artifactId>javax.faces</artifactId>
-            <version>2.1.6</version>
+            <version>2.2.0-m01</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
