--- a/examples/webapp/pom.xml
+++ b/examples/webapp/pom.xml
@@ -98,11 +98,13 @@
                     <groupId>com.sun.faces</groupId>
                     <artifactId>jsf-api</artifactId>
                     <version>2.1.7</version>
+					<scope>provided</scope>
                 </dependency>
                 <dependency>
                     <groupId>com.sun.faces</groupId>
                     <artifactId>jsf-impl</artifactId>
                     <version>2.1.7</version>
+					<scope>provided</scope>
                 </dependency>
 
                 <dependency>
