--- a/kernel/pom.xml
+++ b/kernel/pom.xml
@@ -58,6 +58,13 @@
             <version>2.2.0-m01</version>
             <scope>provided</scope>
         </dependency>
+		<!--
+        <dependency>
+            <groupId>org.glassfish.main.web</groupId>
+            <artifactId>war-util</artifactId>
+            <version>4.0-SNAPSHOT</version>
+        </dependency>
+		-->
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-api</artifactId>
