--- a/examples/plummer-example-data/pom.xml
+++ b/examples/plummer-example-data/pom.xml
@@ -11,4 +11,12 @@
 
     <artifactId>plummer-example-data</artifactId>
     <name>Plummer Example Data</name>
+    <dependencies>
+        <dependency>
+            <groupId>javax</groupId>
+            <artifactId>javaee-api</artifactId>
+            <version>6.0</version>
+            <scope>provided</scope>
+        </dependency>
+    </dependencies>
 </project>
