--- a/examples/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/examples/webapp/src/main/webapp/WEB-INF/web.xml
@@ -13,13 +13,14 @@
         <servlet-name>Faces Servlet</servlet-name>
         <url-pattern>*.jsf</url-pattern>
     </servlet-mapping>
-    <!--
     <servlet>
         <servlet-name>Jersey Web Application</servlet-name>
         <servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
         <init-param>
-            <param-name>com.sun.jersey.config.property.packages</param-name>
-            <param-value>org.glassfish.plummer.example.webapp</param-value>
+            <param-name>javax.ws.rs.Application</param-name>
+            <param-value>org.glassfish.plummer.kernel.rest.RestApplication</param-value>
+            <!--            <param-name>com.sun.jersey.config.property.packages</param-name>
+            <param-value>org.glassfish.plummer.example.webapp</param-value>-->
         </init-param>
     </servlet>
     
@@ -27,7 +28,6 @@
         <servlet-name>Jersey Web Application</servlet-name>
         <url-pattern>/rest/*</url-pattern>
     </servlet-mapping>
-    -->
 
     <welcome-file-list>
         <welcome-file>index.jsf</welcome-file>
