--- a/examples/webapp/pom.xml
+++ b/examples/webapp/pom.xml
@@ -30,94 +30,85 @@
             <scope>provided</scope>
         </dependency>
     </dependencies>
+
     <profiles>
         <profile>
-            <id>owb</id>
-            <dependencies>
-                <dependency>
-                    <groupId>org.apache.openwebbeans</groupId>
-                    <artifactId>openwebbeans-impl</artifactId>
-                    <version>1.1.3</version>
-                </dependency>
+            <id>osgi</id>
+            <activation>
+                <property>
+                    <name>mode</name>
+                    <value>osgi</value>
+                </property>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.felix</groupId>
+                        <artifactId>maven-bundle-plugin</artifactId>
+                        <extensions>true</extensions>
+                        <configuration>
+                            <supportedProjectTypes>
+                                <supportedProjectType>war</supportedProjectType>
+                                <supportedProjectType>bundle</supportedProjectType>
+                                <supportedProjectType>jar</supportedProjectType>
+                            </supportedProjectTypes>
+                            <instructions>
+                                <!-- Read all OSGi configuration info from this optional file -->
+                                <!--                        <_include>-osgi.properties</_include>-->
 
-                <dependency>
-                    <groupId>org.apache.geronimo.specs</groupId>
-                    <artifactId>geronimo-interceptor_1.1_spec</artifactId>
-                    <version>1.0</version>
-                    <scope>provided</scope>
-                </dependency>
 
-
-                <dependency>
-                    <groupId>org.apache.openwebbeans</groupId>
-                    <artifactId>openwebbeans-web</artifactId>
-                    <version>1.1.3</version>
-                </dependency>
-
-                <dependency>
-                    <groupId>org.apache.geronimo.specs</groupId>
-                    <artifactId>geronimo-servlet_3.0_spec</artifactId>
-                    <version>1.0</version>
-                    <scope>provided</scope>
-                </dependency>
-
-                <dependency>
-                    <groupId>org.apache.openwebbeans</groupId>
-                    <artifactId>openwebbeans-ee-common</artifactId>
-                    <version>1.1.3</version>
-                </dependency>
-
-                <dependency>
-                    <groupId>org.apache.geronimo.specs</groupId>
-                    <artifactId>geronimo-jcdi_1.0_spec</artifactId>
-                    <scope>provided</scope>
-                    <version>1.0</version>
-                </dependency>
-
-                <dependency>
-                    <groupId>org.apache.geronimo.specs</groupId>
-                    <artifactId>geronimo-atinject_1.0_spec</artifactId>
-                    <scope>provided</scope>
-                    <version>1.0</version>
-                </dependency>
-
-                <dependency>
-                    <groupId>org.apache.openwebbeans</groupId>
-                    <artifactId>openwebbeans-spi</artifactId>
-                    <version>1.1.3</version>
-                    <scope>provided</scope>
-                </dependency>
-   
-                <dependency>
-                    <groupId>org.apache.openwebbeans</groupId>
-                    <artifactId>openwebbeans-resource</artifactId>
-                    <version>1.1.3</version>
-                </dependency>
-                
-                <dependency>
-                    <groupId>com.sun.faces</groupId>
-                    <artifactId>jsf-api</artifactId>
-                    <version>2.1.7</version>
-					<scope>provided</scope>
-                </dependency>
-                <dependency>
-                    <groupId>com.sun.faces</groupId>
-                    <artifactId>jsf-impl</artifactId>
-                    <version>2.1.7</version>
-					<scope>provided</scope>
-                </dependency>
-
-                <dependency>
-                    <groupId>com.sun.jersey</groupId>
-                    <artifactId>jersey-server</artifactId>
-                    <version>1.12</version>
-                </dependency>
-                <dependency>
-                    <groupId>com.sun.jersey.glassfish.v3.osgi</groupId>
-                    <artifactId>jersey-gf-servlet</artifactId>
-                    <version>1.12</version>
-                </dependency>
-            </dependencies>
+                                <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
+                                <Export-Package/>
+                                <Import-Package>org.glassfish.plummer.api, org.osgi.framework, org.osgi.util.tracker</Import-Package>
+                                <DynamicImport-Package>*</DynamicImport-Package>
+                                <Bundle-ClassPath>.,WEB-INF/classes</Bundle-ClassPath>
+                                <Embed-Directory>WEB-INF/lib</Embed-Directory>
+                                <Embed-Dependency>*;scope=compile|runtime</Embed-Dependency>
+                                <Embed-Transitive>true</Embed-Transitive>
+                                <Web-ContextPath>${project.artifactId}</Web-ContextPath>
+                                <Webapp-Context>${project.artifactId}</Webapp-Context>
+                            </instructions>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>bundle-manifest</id>
+                                <phase>process-classes</phase>
+                                <goals>
+                                    <goal>manifest</goal>
+                                </goals>
+                            </execution>
+                            <execution>
+                                <id>bundle-install</id>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>install</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin> <!-- Need to use this plugin to build war files -->
+                        <artifactId>maven-war-plugin</artifactId>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <version>2.2</version>
+                        <configuration>
+                            <archive>
+                                <manifestFile>
+                                    ${project.build.outputDirectory}/META-INF/MANIFEST.MF
+                                </manifestFile>
+                                <!-- For some reason, adding Bundle-ClassPath in maven-bundle-plugin
+                                     confuses that plugin and it generates wrong Import-Package, etc.
+                                     So, we generate it here.
+                                -->
+                                <manifestEntries>
+                                    <Bundle-ClassPath>WEB-INF/classes/</Bundle-ClassPath>
+                                </manifestEntries>
+                            </archive>
+                            <!-- We don't have a web.xml -->
+                            <failOnMissingWebXml>false</failOnMissingWebXml>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
         </profile>
     </profiles>
 </project>
